--- a/src/css/base.css
+++ b/src/css/base.css
@@ -182,3 +182,14 @@ span{
   .hidden-load-more{
     display: none;
   }
+  .load-more-div{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 16px;
+  }
+  .load-more{
+    width: 120px;
+    text-align: center;
+    
+    
+  }
